# moonrepo-nix

./: .envrc  .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  build.sh  devenv.nix  devenv.yaml  moon.yml  rust-toolchain.toml
.claude/: settings.local.json
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
.moon/: toolchain.yml  workspace.yml
examples/: README.md  toolchain.yml
examples/.moon/: toolchain.yml  workspace.yml
examples/.moon/cache/states/: projectsBuildData.json  workspaceGraph.json
examples/devenv/: README.md  devenv.nix  devenv.yaml  moon.yml
examples/devenv/.moon/: toolchain.yml  workspace.yml
examples/flakes/: README.md  flake.nix  moon.yml  package.json  test.yml
examples/flakes/.moon/: tasks.yml  toolchain.yml  workspace.yml
examples/flakes/.moon/cache/: runReport.json
examples/flakes/.moon/cache/schemas/: toolchain.json
examples/flakes/.moon/cache/states/: configSchemas.json  moonVersionCheck.json  setupToolchain-node-20.0.0.json
examples/flakes/.moon/cache/states/flakes/: snapshot.json
examples/flakes/scripts/: test-with-nix.sh
examples/flox/: README.md  moon.yml
examples/flox/.flox/env/: manifest.toml
examples/flox/.moon/: toolchain.yml  workspace.yml
examples/flox/.moon/cache/: runReport.json
examples/flox/.moon/cache/schemas/: project.json
examples/flox/.moon/cache/states/: moonVersionCheck.json
examples/flox/.moon/cache/states/flox/: snapshot.json
examples/scripts/: nix-shell-example.sh
src/: config.rs  lib.rs  nix.rs  tier1.rs  tier2.rs  tier3.rs
tests/: toolchain_test.rs
(+5 files in other folders)
