[package]
name = "moon_toolchain_nix"
version = "0.1.0"
edition = "2021"
license = "MIT"
publish = false
authors = ["David Flanagan <david@rawkode.dev>"]
description = "Nix toolchain plugin for moon"
repository = "https://github.com/rawkode/moonrepo-nix"

[package.metadata.release]
pre-release-replacements = [
    { file = "./CHANGELOG.md", search = "Unreleased", replace = "{{version}}" },
]

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
extism-pdk = "1.4.1"
moon_config = "0.1.6"
moon_pdk = { version = "0.2.3", features = ["schematic"] }
moon_pdk_api = "0.2.4"
rustc-hash = "2.1.1"
schematic = { version = "0.18.8", default-features = false, features = ["config", "schema"] }
serde = { version = "1.0.219", features = ["derive"] }
starbase_utils = { version = "0.11.11", default-features = false, features = ["toml"] }

[dev-dependencies]
moon_pdk_test_utils = "0.2.4"
serde_json = "1.0.140"
starbase_sandbox = "0.9.3"
tokio = { version = "1.45.1", features = ["full"] }

[features]
default = ["wasm"]
wasm = []